# lmaovpn

./: API_INTEGRATION.md  BUILD_STATUS.md  CLEAN_ARCHITECTURE.md  FINAL_SUMMARY.md  GET_STARTED.md  IMPLEMENTATION_STATUS.md  README-VPN-SERVER.md  README.md  SWIG_FIX_SUMMARY.md  SWIG_SOLUTION.md  VPN-SERVER-STATUS.md  build.gradle.kts  settings.gradle.kts  setup-vpn-server.sh  start-vpn-server.sh  stop-vpn-server.sh
android/api/: GuestHoleSuppressor.kt
android/base/ui/: ProtonSwitch.kt
android/profiles/usecases/: GetProfileById.kt
android/ui/planupgrade/: PlanHighlightsViewModel.kt
app/: build.gradle.kts
app/src/androidTest/java/com/amobear/freevpn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/amobear/freevpn/: MainActivity.kt  VpnApplication.kt
app/src/main/java/com/amobear/freevpn/activities/: LogWindow.kt
app/src/main/java/com/amobear/freevpn/di/: DatabaseModule.kt  NetworkModule.kt  RepositoryModule.kt  VpnModule.kt
app/src/main/java/com/amobear/freevpn/notifications/: NotificationHelper.kt
app/src/main/java/com/amobear/freevpn/util/: PermissionManager.kt
app/src/main/java/com/amobear/freevpn/utils/: Constants.kt  OvpnFileReader.kt  Storage.kt
app/src/main/java/com/signallab/lib/: SignalHelper.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/amobear/freevpn/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openvpn/: build.gradle.kts
openvpn/src/main/cpp/: CMakeLists.txt  lz4.cmake
openvpn/src/main/cpp/fmt/: CMakeLists.txt
(+74 files in other folders)
